Fixed landing page UI layout issues.

--- a/WebContent/style/master.css
+++ b/WebContent/style/master.css
@@ -130,6 +130,3 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
-#btnCreateAuction {
-	width: 100%;
-}
